--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -1,17 +1,18 @@
 server:
-  port: ${SERVER_PORT:8081}
+  port: 8081
 
 spring:
-  config:
-    import: optional:file:.env
 
   datasource:
-    url: jdbc:sybase:Tds:${DB_HOST}:${DB_PORT}/${DB_NAME}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:sybase:Tds:yovin:5000/users_db
+    username: sa
+    password: 8427015968
     driver-class-name: com.sybase.jdbc42.jdbc.SybDriver
-
   jpa:
+    database-platform: org.hibernate.dialect.SybaseASEDialect
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.SybaseASEDialect
