--- a/tnotification-service/pom.xml
+++ b/tnotification-service/pom.xml
@@ -68,7 +68,17 @@
         <scope>test</scope>
     </dependency>
 	</dependencies>
-
+<dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>bom</artifactId>
+            <version>2.25.62</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+</dependencyManagement>
 	<build>
 		<plugins>
 			<plugin>
