--- a/transaction-service/pom.xml
+++ b/transaction-service/pom.xml
@@ -62,6 +62,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+		<dependency>
+    <groupId>net.sourceforge.jtds</groupId>
+    <artifactId>jtds</artifactId>
+    <version>1.3.1</version>
+</dependency>
 	</dependencies>
 
 	<build>
